# vphd

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pom.xml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py  schemas.py
app/core/: llm_client.py  rate_limit.py  scoring.py  storage.py
app/static/: app.js  styles.css
app/templates/: index.html
scripts/: smoke_test.sh
src/main/java/com/example/tenthman/: TenthManPlannerServer.java
tests/: test_api.py  test_scoring.py
