[project]
name = "braindump-web"
version = "0.1.0"
description = "BrainDump v3.1 FastAPI + Vanilla JS MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
